fixed problem with overflow of presetation img

--- a/src/styles/blocks/_presetation.scss
+++ b/src/styles/blocks/_presetation.scss
@@ -3,14 +3,16 @@
   justify-content: center;
 
   mix-blend-mode: darken;
-
-  opacity: 0;
-  transform: translateX(50%);
-  transition: opacity $transition-time, transform $transition-time;
+  overflow: hidden;
 
   &__img {
     width: 100%;
     max-width: 848px;
+
+    opacity: 0;
+    
+    transform: translateX(50%);
+    transition: opacity $transition-time, transform $transition-time;
   }
 }
 
